--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -1,28 +1,18 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <title>BooleanCalendarHomePage</title>
-    <link rel="stylesheet" href="../static/IndexStyle.css">
 </head>
-<style>
-    body {
-        background-image: url('../Images/LoginBackgroundImage.jpg');
-    }
-</style>
 <style>
     *{
         margin: 0;
         padding: 0;
         font-family: sans-serif;
-
-
     }
-
     .banner{
         width: 100%;
         height: 100vh;
-        background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(Images/LoginBackgroundImage.jpg);
         background-size: cover;
-        background-position: center;
+        background: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(Images/LoginBackgroundImage.jpg);
     }
     .navbar{
         width: 85%;
