--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -12,7 +12,7 @@
         width: 100%;
         height: 100vh;
         background-size: cover;
-        background: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(Images/LoginBackgroundImage.jpg);
+        background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(../Images/LoginBackgroundImage.jpg);
     }
     .navbar{
         width: 85%;
