Created Frog River Recursion Lab (Java) - Also converted main html files to use Thymeleaf templates (header, headfile, footer)

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-
+ <div>What are you looking down here for? The good stuff is up at the top!</div>
 </body>
 </html>
