--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,6 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-
+<div class="navbar">
+    <img src="../Images/BLogo.png" class="Logo">
+    <ul>
+        <li><a href="">Register</a></li>
+        <li><a href="">LogIn</a></li>
+        <li><a href="">Calendar</a></li>
+        <li><a href="">Meet the Team</a></li>
+        <li><a href="">Mini Labs</a></li>
+    </ul>
+</div>
 </body>
 </html>
