--- a/src/main/resources/templates/river-recursion.html
+++ b/src/main/resources/templates/river-recursion.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:replace="fragments/headfile :: head">
+    <title>FrogRiver</title>
 </head>
 <body>
+<div th:replace="fragments/header :: body">
+</div>
 
 </body>
 </html>
