--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -102,13 +102,10 @@
 <body>
 <div class="banner">
     <div class="navbar">
-        <img src="../Images/BLogo.png" class="Logo">
         <ul>
             <li><a href="">Register</a></li>
             <li><a href="">LogIn</a></li>
             <li><a href="">Calendar</a></li>
-            <li><a href="">Meet the Team</a></li>
-            <li><a href="">Mini Labs</a></li>
         </ul>
     </div>
 
@@ -116,8 +113,8 @@
         <h1>WELCOME TO BOOLEANS HEADQUARTERS!</h1>
         <P>ON THIS WEBSITE, YOU WILL BE ABLE TO ACCESS OUR CALENDAR APPLICATION, VIEW OUR MINI LABS, GET TO KNOW THE TEAM BEHIND THE WIZARDRY, & MORE!</P>
         <div>
-            <button onclick="window.location.href=''"><span></span>TBD</button>
-            <button onclick="window.location.href=''"><span></span>TBD</button>
+            <button onclick="window.location.href=''"><span></span>Mini Labs</button>
+            <button onclick="window.location.href='https://github.com/AdityaS1426/BooleansCalendar'"><span></span>GitHub Repository</button>
         </div>
     </div>
 
