Deployed Aditya's Mini Lab.

--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -103,9 +103,11 @@
 <div class="banner">
     <div class="navbar">
         <ul>
-            <li><a href="">Register</a></li>
-            <li><a href="">LogIn</a></li>
-            <li><a href="">Calendar</a></li>
+            <li><a href="">Neil</a></li>
+            <li><a href="https://spring-boot-calculator.herokuapp.com/calculator">Aditya</a></li>
+            <li><a href="">Yasaswi</a></li>
+            <li><a href="">Praveen</a></li>
+            <li><a href="">Vihan</a></li>
         </ul>
     </div>
 
