Updated mapping of the website.

--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -113,7 +113,7 @@
         <h1>WELCOME TO BOOLEANS HEADQUARTERS!</h1>
         <P>ON THIS WEBSITE, YOU WILL BE ABLE TO ACCESS OUR CALENDAR APPLICATION, VIEW OUR MINI LABS, GET TO KNOW THE TEAM BEHIND THE WIZARDRY, & MORE!</P>
         <div>
-            <button onclick="window.location.href=''"><span></span>Mini Labs</button>
+            <button onclick="window.location.href='https://booleans-website.herokuapp.com/labs'"><span></span>Mini Labs</button>
             <button onclick="window.location.href='https://github.com/AdityaS1426/BooleansCalendar'"><span></span>GitHub Repository</button>
         </div>
     </div>
