--- a/src/main/resources/templates/MiniLabs.html
+++ b/src/main/resources/templates/MiniLabs.html
@@ -104,7 +104,7 @@
     <div class="navbar">
         <ul>
             <li><a href="">Neil</a></li>
-            <li><a href="">Aditya</a></li>
+            <li><a href="https://spring-boot-calculator.herokuapp.com/calculator">Aditya</a></li>
             <li><a href="">Yasaswi</a></li>
             <li><a href="">Praveen</a></li>
             <li><a href="">Vihan</a></li>
