Added a Mini Labs Home Page.

--- a/src/main/resources/templates/MiniLabAdityaPage.html
+++ b/src/main/resources/templates/MiniLabAdityaPage.html
@@ -1,6 +1,6 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>BooleanCalendarHomePage</title>
+    <title>AdityaMiniLabPage</title>
 </head>
 <style>
     *{
@@ -103,20 +103,16 @@
 <div class="banner">
     <div class="navbar">
         <ul>
-            <li><a href="">Neil</a></li>
-            <li><a href="https://spring-boot-calculator.herokuapp.com/calculator">Aditya</a></li>
-            <li><a href="">Yasaswi</a></li>
-            <li><a href="">Praveen</a></li>
-            <li><a href="">Vihan</a></li>
+            <li><a href="https://spring-boot-calculator.herokuapp.com/calculator">Recursion</a></li>
         </ul>
     </div>
 
     <div class="content">
-        <h1>MINI LABS</h1>
-        <P>THIS PAGE CONTAINS LINKS TO THE MINI LABS OF EACH TEAM MEMBER FROM THE BOOLEANS. CLICK THE NAMES ABOVE TO VIEW THEIR MINI LABS!</P>
+        <h1>ADITYA'S MINI LABS</h1>
+        <P>CLICK ON THE LINKS ABOVE TO VIEW ADITYA'S MINI LABS</P>
         <div>
             <button onclick="window.location.href='https://booleans-website.herokuapp.com/'"><span></span>Home</button>
-            <button onclick="window.location.href='https://github.com/AdityaS1426/BooleansCalendar'"><span></span>GitHub Repository</button>
+            <button onclick="window.location.href='https://github.com/AdityaS1426'"><span></span>GitHub Profile</button>
         </div>
     </div>
 
