--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -104,7 +104,7 @@
     <div class="navbar">
         <ul>
             <li><a href="">Neil</a></li>
-            <li><a href="">Aditya</a></li>
+            <li><a href="https://booleans-website.herokuapp.com/labs/Aditya">Aditya</a></li>
             <li><a href="">Yasaswi</a></li>
             <li><a href="">Praveen</a></li>
             <li><a href="">Vihan</a></li>
