--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -105,7 +105,7 @@
         <ul>
             <li><a href="">Neil</a></li>
             <li><a href="https://booleans-website.herokuapp.com/labs/Aditya">Aditya</a></li>
-            <li><a href="">Yasaswi</a></li>
+            <li><a href="https://java-minilab.herokuapp.com/calculator">Yasaswi</a></li>
             <li><a href="">Praveen</a></li>
             <li><a href="">Vihan</a></li>
         </ul>
