added link, need to change contents

--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -106,7 +106,7 @@
             <li><a href="">Neil</a></li>
             <li><a href="https://booleans-website.herokuapp.com/labs/Aditya">Aditya</a></li>
             <li><a href="https://java-minilab.herokuapp.com/calculator">Yasaswi</a></li>
-            <li><a href="">Praveen</a></li>
+            <li><a href="https://spring-boot-calculator.herokuapp.com/calculator">Praveen</a></li>
             <li><a href="">Vihan</a></li>
         </ul>
     </div>
