added recursion link

--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -103,7 +103,7 @@
 <div class="banner">
     <div class="navbar">
         <ul>
-            <li><a href="">Neil</a></li>
+            <li><a href="https://testcalchub.herokuapp.com/logarithm.html">Neil</a></li>
             <li><a href="https://booleans-website.herokuapp.com/labs/Aditya">Aditya</a></li>
             <li><a href="https://java-minilab.herokuapp.com/calculator">Yasaswi</a></li>
             <li><a href="">Praveen</a></li>
