--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -1,8 +1,41 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <title>MiniLabsHomePage</title>
-</head>
-<style>
+    <style>
+
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+
+
     *{
         margin: 0;
         padding: 0;
@@ -18,7 +51,7 @@
         width: 85%;
         margin: auto;
         padding: 35px 0;
-        display: flex;
+        display: inline-block;
         align-items: center;
         justify-content: space-between;
     }
@@ -31,7 +64,9 @@
         display: inline-block;
         margin: 20px;
         position: relative;
+        white-space: no-wrap;
     }
+
     .navbar ul li a{
         text-decoration: none;
         color: #fff;
@@ -71,7 +106,6 @@
         width: 200px;
         padding: 15px 0;
         text-align: center;
-        margin: 20px 10px;
         border-radius: 25px;
         font-weight: bold;
         border: 2px solid #009688;
@@ -99,19 +133,55 @@
         border: none;
     }
 </style>
+</head>
+
 <body>
 <div class="banner">
-    <div class="navbar">
-        <ul>
-            <li><a href="https://testcalchub.herokuapp.com/logarithm.html">Neil</a></li>
-            <li><a href="https://booleans-website.herokuapp.com/labs/Aditya">Aditya</a></li>
-            <li><a href="https://java-minilab.herokuapp.com/calculator">Yasaswi</a></li>
-            <li><a href="https://spring-boot-calculator.herokuapp.com/calculator">Praveen</a></li>
-            <li><a href="">Vihan</a></li>
-        </ul>
-    </div>
+    <div class="navbar"><ul>
+            <li><div class="dropdown">
+                <button class="dropbtn"><span></span>Neil</button>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div></li>
+            <li><div class="dropdown">
+                <button class="dropbtn"><span></span>Praveen</button>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div></li>
+            <li><div class="dropdown">
+                <button class="dropbtn"><span></span>Aditya</button>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div></li>
+            <li><div class="dropdown">
+                <button class="dropbtn"><span></span>Yasaswi</button>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div></li>
+            <li><div class="dropdown">
+                <button class="dropbtn"><span></span>Vihan</button>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div></li>
+    </div></ul>
 
-    <div class="content">
+
+<div class="content">
         <h1>MINI LABS</h1>
         <P>THIS PAGE CONTAINS LINKS TO THE MINI LABS OF EACH TEAM MEMBER FROM THE BOOLEANS. CLICK THE NAMES ABOVE TO VIEW THEIR MINI LABS!</P>
         <div>
