--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -113,8 +113,8 @@
         <h1>WELCOME TO BOOLEANS HEADQUARTERS!</h1>
         <P>ON THIS WEBSITE, YOU WILL BE ABLE TO ACCESS OUR CALENDAR APPLICATION, VIEW OUR MINI LABS, GET TO KNOW THE TEAM BEHIND THE WIZARDRY, & MORE!</P>
         <div>
-            <button onclick="window.location.href='https://booleans-website.herokuapp.com/labs'"><span></span>Mini Labs</button>
-            <button onclick="window.location.href='https://github.com/AdityaS1426/BooleansCalendar'"><span></span>GitHub Repository</button>
+            <button onclick="window.location.href='/labs'"><span></span>Mini Labs</button>
+            <button onclick="window.location.href='/BooleansCalendar'"><span></span>GitHub Repository</button>
         </div>
     </div>
 
