--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -8,6 +8,7 @@
 .dropdown {
   position: relative;
   display: inline-block;
+  width: 175 px;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -15,7 +16,7 @@
   display: none;
   position: absolute;
   background-color: #f1f1f1;
-  min-width: 160px;
+  min-width: 200px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
@@ -48,7 +49,7 @@
         background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(../Images/LoginBackgroundImage.jpg);
     }
     .navbar{
-        width: 85%;
+        width: 100%;
         margin: auto;
         padding: 35px 0;
         display: inline-block;
@@ -64,12 +65,11 @@
         display: inline-block;
         margin: 20px;
         position: relative;
-        white-space: no-wrap;
     }
 
     .navbar ul li a{
         text-decoration: none;
-        color: #fff;
+        color: black;
         text-transform: uppercase;
     }
     .navbar ul li::after{
@@ -85,6 +85,9 @@
     .navbar ul li:hover::after{
         width: 100%;
     }
+
+
+
     .content{
         width: 100%;
         position: absolute;
@@ -178,7 +181,7 @@
                     <a href="#">Link 3</a>
                 </div>
             </div></li>
-    </div></ul>
+    </ul></div>
 
 
 <div class="content">
