--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -51,7 +51,7 @@
     .navbar{
         width: 100%;
         margin: auto;
-        padding: 35px 0;
+        padding: 0 0;
         display: inline-block;
         align-items: center;
         justify-content: space-between;
@@ -160,7 +160,7 @@
             <li><div class="dropdown">
                 <button class="dropbtn"><span></span>Aditya</button>
                 <div class="dropdown-content">
-                    <a href="#">Link 1</a>
+                    <a href="/calculator">Calculator</a>
                     <a href="#">Link 2</a>
                     <a href="#">Link 3</a>
                 </div>
@@ -176,7 +176,7 @@
             <li><div class="dropdown">
                 <button class="dropbtn"><span></span>Vihan</button>
                 <div class="dropdown-content">
-                    <a href="#">Link 1</a>
+                    <a href="/labs/Vihan/river">FrogRiver</a>
                     <a href="#">Link 2</a>
                     <a href="#">Link 3</a>
                 </div>
