--- a/src/main/resources/templates/labs/Vihan/River-Recursion.html
+++ b/src/main/resources/templates/labs/Vihan/River-Recursion.html
@@ -1,10 +1,19 @@
+<!DOCTYPE HTML>
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head th:replace="fragments/headfile :: head">
     <title>FrogRiver</title>
 </head>
 <body>
-<div th:replace="fragments/header :: body">
+<div>
+    <form id="RiverForm" action="/labs/Vihan/river" method="POST" >
+        <label for="rocks">Number of rocks across the river</label>
+        <input name="rocks" id="rocks" >
+        <button>Go!</button>
+    </form>
+
+<h1><p th:text="'Result: '+${paths}"/></h1>
 </div>
+
 
 </body>
 </html>
