--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -152,7 +152,7 @@
             <li><div class="dropdown">
                 <button class="dropbtn"><span></span>Praveen</button>
                 <div class="dropdown-content">
-                    <a href="#">Link 1</a>
+                    <a href="/labs/Praveen/dafact">Factorial</a>
                     <a href="#">Link 2</a>
                     <a href="#">Link 3</a>
                 </div>
@@ -160,7 +160,7 @@
             <li><div class="dropdown">
                 <button class="dropbtn"><span></span>Aditya</button>
                 <div class="dropdown-content">
-                    <a href="/calculator">Calculator</a>
+                    <a href="Link 1">Calculator</a>
                     <a href="#">Link 2</a>
                     <a href="#">Link 3</a>
                 </div>
