--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -168,7 +168,7 @@
             <li><div class="dropdown">
                 <button class="dropbtn"><span></span>Yasaswi</button>
                 <div class="dropdown-content">
-                    <a href="#">Link 1</a>
+                    <a href="https://java-minilab.herokuapp.com/calculator">Recursion Minilab</a>
                     <a href="#">Link 2</a>
                     <a href="#">Link 3</a>
                 </div>
