Added time elapsed for WOW to river recursion

--- a/src/main/resources/templates/labs/Vihan/River-Recursion.html
+++ b/src/main/resources/templates/labs/Vihan/River-Recursion.html
@@ -12,6 +12,8 @@
     </form>
 
 <h1><p th:text="'Result: '+${paths}"/></h1>
+<h2><p th:text="'Time: ' +${riverTime}+' nanoseconds'"/></h2>
+
 </div>
 
 
