Added explanation paragraph to river-recursion

--- a/src/main/resources/templates/labs/Vihan/River-Recursion.html
+++ b/src/main/resources/templates/labs/Vihan/River-Recursion.html
@@ -2,13 +2,20 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head th:replace="fragments/headfile :: head">
     <title>FrogRiver</title>
+    <style>
+        RiverFormButton {
+            color:black
+        }
+    </style>
 </head>
 <body>
 <div>
+    <p>A frog is attempting to cross a river by hopping across n stones. The frog can either jump two stones at a time (can cross 2 stone river in one hop) or can jump one stone.</p>
+    <p>How many unique paths can the frog take across a river that is n-stones wide? Test it out.</p>
     <form id="RiverForm" action="/labs/Vihan/river" method="POST" >
         <label for="rocks">Number of rocks across the river</label>
         <input name="rocks" id="rocks" >
-        <button>Go!</button>
+        <button id="RiverFormButton">Go!</button>
     </form>
 
 <h1><p th:text="'Result: '+${paths}"/></h1>
