Update HTML files.

--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -4,11 +4,11 @@
     <style>
 
 
-/* The container <div> - needed to position the dropdown content */
+/* The container <div> - Needed to position the dropdown content. */
 .dropdown {
   position: relative;
   display: inline-block;
-  width: 175 px;
+  width: auto;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -160,15 +160,15 @@
             <li><div class="dropdown">
                 <button class="dropbtn"><span></span>Aditya</button>
                 <div class="dropdown-content">
-                    <a href="Link 1">Calculator</a>
-                    <a href="#">Link 2</a>
+                    <a href="https://spring-boot-calculator.herokuapp.com/calculator">Recursion Calculator</a>
+                    <a href="">Link 2</a>
                     <a href="#">Link 3</a>
                 </div>
             </div></li>
             <li><div class="dropdown">
                 <button class="dropbtn"><span></span>Yasaswi</button>
                 <div class="dropdown-content">
-                    <a href="https://java-minilab.herokuapp.com/calculator">Recursion Minilab</a>
+                    <a href="https://java-minilab.herokuapp.com/calculator">Recursion Mini Lab</a>
                     <a href="#">Link 2</a>
                     <a href="#">Link 3</a>
                 </div>
