added recursion lab WOW with loops.

--- a/src/main/resources/templates/LabsHTMLPages/Neil/NeilFactorial.html
+++ b/src/main/resources/templates/LabsHTMLPages/Neil/NeilFactorial.html
@@ -12,6 +12,7 @@
     </form>
 
     <h1><p th:text="'Result: '+${paths}"/></h1>
+    <h2><p th:text="'Result using Loops: '+${paths}"/></h2>
 </div>
 
 
