Added the Inheritance Lab link to Mini Labs page.

--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -160,9 +160,9 @@
             <li><div class="dropdown">
                 <button class="dropbtn"><span></span>Aditya</button>
                 <div class="dropdown-content">
-                    <a href="https://spring-boot-calculator.herokuapp.com/calculator">Recursion Calculator</a>
-                    <a href="">Link 2</a>
-                    <a href="#">Link 3</a>
+                    <a href="https://spring-boot-calculator.herokuapp.com/calculator">Recursion Lab</a>
+                    <a href="https://drive.google.com/file/d/1P4HzkeJpJPhy6DnHgj-SUC69sCSxHWah/view?usp=sharing">Inheritance Lab</a>
+                    <a href="#">TBD</a>
                 </div>
             </div></li>
             <li><div class="dropdown">
