Fixed Factorial integration

--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -144,7 +144,7 @@
             <li><div class="dropdown">
                 <button class="dropbtn"><span></span>Neil</button>
                 <div class="dropdown-content">
-                    <a href="/LabsHTMLPages/Neil/NeilFactorial">Factorials!</a>
+                    <a href="/labs/Neil/NeilFactorial">Factorials!</a>
                     <a href="#">Link 2</a>
                     <a href="#">Link 3</a>
                 </div>
@@ -152,7 +152,7 @@
             <li><div class="dropdown">
                 <button class="dropbtn"><span></span>Praveen</button>
                 <div class="dropdown-content">
-                    <a href="/LabsHTMLPages/Praveen/PraveenFactorial">Factorial</a>
+                    <a href="/labs/Praveen/dafact">Factorial</a>
                     <a href="#">Link 2</a>
                     <a href="#">Link 3</a>
                 </div>
@@ -176,7 +176,7 @@
             <li><div class="dropdown">
                 <button class="dropbtn"><span></span>Vihan</button>
                 <div class="dropdown-content">
-                    <a href="/LabsHTMLPages/Vihan/RiverRecursion">Frog River</a>
+                    <a href="/labs/Vihan/RiverRecursion">Frog River</a>
                     <a href="#">Link 2</a>
                     <a href="#">Link 3</a>
                 </div>
