--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -144,7 +144,7 @@
             <li><div class="dropdown">
                 <button class="dropbtn"><span></span>Neil</button>
                 <div class="dropdown-content">
-                    <a href="/labs/Neil/NeilFactorial">Factorials!</a>
+                    <a href="/labs/Neil/dafact">Factorials!</a>
                     <a href="#">Link 2</a>
                     <a href="#">Link 3</a>
                 </div>
