Added inheritance, working on linking inheritance to the website

--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -153,7 +153,7 @@
                 <button class="dropbtn"><span></span>Praveen</button>
                 <div class="dropdown-content">
                     <a href="/labs/Praveen/dafact">Factorial</a>
-                    <a href="#">Link 2</a>
+                    <a href="/labs/Praveen/Car">Car Inheritance</a>
                     <a href="#">Link 3</a>
                 </div>
             </div></li>
