--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -99,7 +99,7 @@
         border: none;
     }
 </style>
-<body>
+<body th:style="'background:url('+ @{../Images/LoginBackgroundImage.jpg} +');'">
 <div class="banner">
     <div class="navbar">
         <ul>
