--- a/src/main/resources/templates/labs/Vihan/RiverRecursion.html
+++ b/src/main/resources/templates/labs/Vihan/RiverRecursion.html
@@ -12,7 +12,7 @@
 <div>
     <p>A frog is attempting to cross a river by hopping across n stones. The frog can either jump two stones at a time (can cross 2 stone river in one hop) or can jump one stone.</p>
     <p>How many unique paths can the frog take across a river that is n-stones wide? Test it out.</p>
-    <form id="RiverForm" action="/labs/Vihan/river" method="POST" >
+    <form id="RiverForm" action="/labs/Vihan/RiverRecursion" method="POST" >
         <label for="rocks">Number of rocks across the river</label>
         <input name="rocks" id="rocks" >
         <button id="RiverFormButton">Go!</button>
