Added a fixed Inheritance Lab.

--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -161,7 +161,7 @@
                 <button class="dropbtn"><span></span>Aditya</button>
                 <div class="dropdown-content">
                     <a href="https://spring-boot-calculator.herokuapp.com/calculator">Recursion Lab</a>
-                    <a href="https://drive.google.com/file/d/1P4HzkeJpJPhy6DnHgj-SUC69sCSxHWah/view?usp=sharing">Inheritance Lab</a>
+                    <a href="https://inheritance-lab.herokuapp.com/">Inheritance Lab</a>
                     <a href="#">TBD</a>
                 </div>
             </div></li>
