--- a/src/main/resources/templates/labs/Aditya/AdityaInheritance.html
+++ b/src/main/resources/templates/labs/Aditya/AdityaInheritance.html
@@ -1,30 +1,35 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.w3.org/1999/xhtml">
-<head th:replace="fragments/headfile :: head">
-    <title>Car Program</title>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <title>Aditya's Inheritance Lab</title>
 </head>
-<body>
-<div>
-    <form id="Car" action="/labs/Aditya/Car" method="POST" >
-        <label
-                for="Gears">How many gears do you want your car to have?
-        </label>
-        <input
-                name="Gears" id="Gears" >
-        <label
-                for="Speed">What do you want the top speed of your car to be?
-        </label>
-        <input
-                name="Speed" id="Speed" >
-        <label
-                for="Height">What ride height do you want your car to be?
-        </label>
-        <input
-                name="Height" id="Height" >
-        <button>Go!</button>
-    </form>
 
-    <h1><p th:text="'Result: '+${paths}"/></h1>
+<body bgcolor="#20BCE3"></body>
+
+<body>
+<div class="lab">
+    <h1>Inheritance Lab - Literature</h1>
+    <h3>Book</h3>
+    <form th:action="@{Inheritance}">
+        <label>Here, you will be able to store information about a book, such as the title, the author, the illustrator, etc.</label>
+        <br>
+        <label>Title</label>
+        <input  th:name="title" th:value="${title}">
+        <br>
+        <label>Author</label>
+        <input th:name="author" th:value="${author}">
+        <br>
+        <label>Illustrator</label>
+        <input th:name="illustrator" th:value="${illustrator}">
+        <br>
+        <input type="submit">
+    </form>
+    <p th:text="${sentence}"></p>
+
+    <p th:text="${time}"></p>
+
 </div>
 </body>
 </html>
