--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -177,7 +177,7 @@
                 <button class="dropbtn"><span></span>Vihan</button>
                 <div class="dropdown-content">
                     <a href="/labs/Vihan/RiverRecursion">Frog River</a>
-                    <a href="#">Link 2</a>
+                    <a href="/labs/Vihan/Sorts">Sorts</a>
                     <a href="#">Link 3</a>
                 </div>
             </div></li>
