Added Bubble Sort

--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -154,7 +154,7 @@
                 <div class="dropdown-content">
                     <a href="/labs/Praveen/dafact">Factorial</a>
                     <a href="/labs/Praveen/Car">Car Inheritance</a>
-                    <a href="#">Link 3</a>
+                    <a href="https://sortcsa.herokuapp.com" >Sorts</a>
                 </div>
             </div></li>
             <li><div class="dropdown">
