--- a/src/main/resources/templates/labs/Vihan/Sorts.html
+++ b/src/main/resources/templates/labs/Vihan/Sorts.html
@@ -17,7 +17,7 @@
     <form th:action="@{Sorts}">
 
         <div>
-            <legend>Type of Data:</legend>
+            <legend>Choose the type of data in the array:</legend>
             <input type="radio" th:name="arrayType" id="integer" th:value="Integer" required>
             <label for="integer">Integer</label>
             <input type="radio" th:name="arrayType" id="string" th:value="String">
@@ -25,25 +25,39 @@
             <input type="radio" th:name="arrayType" id="Computer" th:value="Computer">
             <label for="Computer">Computer</label>
         </div>
-            <legend>Type of Algorithm</legend>
+            <legend>Choose the sorting algorithm</legend>
             <input type="radio" th:name="sortMethod" id="insertion" th:value="Insertion" required>
             <label for="insertion">Insertion</label>
             <input type="radio" th:name="sortMethod" id="bubble" th:value="Bubble">
             <label for="bubble">Bubble</label>
             <input type="radio" th:name="sortMethod" id="selection" th:value="Selection">
             <label for="selection">Selection</label>
-        <div>
-
         </div>
-
-
         <!--<label for="array">Input array, must be of type integer or string</label>-->
         <!--<input name="array" id="array">-->
         <button id="Sortbutton">Go!</button>
-
     </form>
 
-<h1><p th:text="'Result: '+${arraySorted}"/></h1>
+<div th:switch="${sortMethod}" class="content">
+
+    <div th:case="'Insertion'" class="description">
+        <p>Best case: O(i) where i is the ith iteration</p>
+        <p>Worst case: O(n^2)</p>
+    </div>
+
+    <div th:case="'Selection'" class="description">
+        <p>Always O(n^2)</p>
+    </div>
+    <div th:case="'Bubble'" class="description">
+        <p>In the current implementation, always O(n^2)</p>
+    </div>
+
+    <div th:case="*" class="description">
+        <p>Click on the buttons. Click "Submit" to see the result..</p>
+    </div>
+</div>
+
+
 <h2><p th:text="'Elapsed Time: ' +${elapsedTime}+' nanoseconds'"/></h2>
 
 <h2><p th:text="'Input Array: '+${array}"></h2>
