--- a/src/main/resources/templates/Fragments/Footer.html
+++ b/src/main/resources/templates/Fragments/Footer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:fragment="footer">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
