--- a/src/main/resources/templates/Fragments/HeadFile.html
+++ b/src/main/resources/templates/Fragments/HeadFile.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:fragment="headfile">
     <meta charset="UTF-8">
     <style>
     *{
