--- a/src/main/resources/templates/labs/Vihan/Sorts.html
+++ b/src/main/resources/templates/labs/Vihan/Sorts.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
+<head th:replace="fragments/headfile :: head">
     <title>Sorts</title>
     <style>
         SortButton {
