--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -145,7 +145,7 @@
                 <button class="dropbtn"><span></span>Neil</button>
                 <div class="dropdown-content">
                     <a href="/labs/Neil/dafact">Factorials!</a>
-                    <a href="#">Link 2</a>
+                    <a href="/labs/Neil/inheritance">Inheritance</a>
                     <a href="#">Link 3</a>
                 </div>
             </div></li>
