added sorts lab

--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -146,7 +146,7 @@
                 <div class="dropdown-content">
                     <a href="/labs/Neil/dafact">Factorials!</a>
                     <a href="/labs/Neil/inheritance">Inheritance</a>
-                    <a href="#">Link 3</a>
+                    <a href="/labs/Neil/Sorts">3 sorts</a>
                 </div>
             </div></li>
             <li><div class="dropdown">
