--- a/src/main/resources/templates/labs/Praveen/praveenFactorial.html
+++ b/src/main/resources/templates/labs/Praveen/praveenFactorial.html
@@ -12,6 +12,7 @@
     </form>
 
     <h1><p th:text="'Result: '+${paths}"/></h1>
+    <h2><p th:text="'Time: ' +${facttime}+' nanoseconds'"/></h2>
 </div>
 
 
