Working Inheritance Lab for Vihan

--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -178,7 +178,7 @@
                 <div class="dropdown-content">
                     <a href="/labs/Vihan/RiverRecursion">Frog River</a>
                     <a href="/labs/Vihan/Sorts">Sorts</a>
-                    <a href="#">Link 3</a>
+                    <a href="/labs/Vihan/Inheritance">Inheritance</a>
                 </div>
             </div></li>
     </ul></div>
