--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -169,7 +169,7 @@
                 <button class="dropbtn"><span></span>Yasaswi</button>
                 <div class="dropdown-content">
                     <a href="https://java-minilab.herokuapp.com/calculator">Recursion Mini Lab</a>
-                    <a href="#">https://csa-sorts.herokuapp.com/</a>
+                    <a href="https://csa-sorts.herokuapp.com/">Sorts Lab</a>
                     <a href="#">Link 3</a>
                 </div>
             </div></li>
