added linked list link to minilab

--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -170,7 +170,7 @@
                 <div class="dropdown-content">
                     <a href="https://java-minilab.herokuapp.com/calculator">Recursion Mini Lab</a>
                     <a href="https://csa-sorts.herokuapp.com/">Sorts Lab</a>
-                    <a href="#">Link 3</a>
+                    <a href="/labs/Yasaswi/LinkedList">Linked List Minilab</a>
                 </div>
             </div></li>
             <li><div class="dropdown">
