--- a/src/main/resources/templates/labs/Yasaswi/YasaswiLinkedList.html
+++ b/src/main/resources/templates/labs/Yasaswi/YasaswiLinkedList.html
@@ -14,8 +14,10 @@
 </head>
 <body bgcolor="#325ea8">
 <form id="linkedList" action="/labs/Yasaswi/LinkedList" method="POST">
-    <p>test</p>
-    <h2><p th:text="'list: ' + ${linkedlist}"/></h2>
+
+    <h2><p th:text="'Head of list: ' + ${linkedlist1}"/></h2>
+    <h2><p th:text="'Second element of list: ' + ${linkedlist2}"/></h2>
+    <h2><p th:text="'Tail of list: ' + ${linkedlist3}"/></h2>
 
 </body>
 </html>
