Added a link to the Mini Labs Home Page.

--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -163,6 +163,7 @@
                     <a href="https://spring-boot-calculator.herokuapp.com/calculator">Recursion</a>
                     <a href="https://inheritance-lab.herokuapp.com/inheritance">Inheritance</a>
                     <a href="https://insertion-sorts-lab.herokuapp.com/sort">Sorts</a>
+                    <a href="https://linked-list-lab.herokuapp.com/linked-list">LinkedList</a>
                 </div>
             </div></li>
             <li><div class="dropdown">
