--- a/src/main/resources/templates/labs/Yasaswi/YasaswiLinkedList.html
+++ b/src/main/resources/templates/labs/Yasaswi/YasaswiLinkedList.html
@@ -18,6 +18,11 @@
     <h2><p th:text="'Head of list: ' + ${linkedlist1}"/></h2>
     <h2><p th:text="'Second element of list: ' + ${linkedlist2}"/></h2>
     <h2><p th:text="'Tail of list: ' + ${linkedlist3}"/></h2>
+    <h2><p th:text="'Full linked list: ' + ${linkedlist4}"/></h2>
+    <input name="add" id="add" >
+    <button>Add to head</button>
+
+
 
 </body>
 </html>
