attempted linked list

--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -155,6 +155,7 @@
                     <a href="/labs/Praveen/dafact">Factorial</a>
                     <a href="/labs/Praveen/Car">Car Inheritance</a>
                     <a href="https://sortcsa.herokuapp.com" >Sorts</a>
+                    <a href="/labs/Praveen/LinkedList" >LinkedList</a>
                 </div>
             </div></li>
             <li><div class="dropdown">
