added Linked List lab

--- a/src/main/resources/templates/MiniLabsHome.html
+++ b/src/main/resources/templates/MiniLabsHome.html
@@ -147,6 +147,7 @@
                     <a href="/labs/Neil/dafact">Factorials!</a>
                     <a href="/labs/Neil/inheritance">Inheritance</a>
                     <a href="/labs/Neil/Sorts">3 sorts</a>
+                    <a href="/labs/Neil/LinkedList">Linked List</a>
                 </div>
             </div></li>
             <li><div class="dropdown">
